home/syncthing/statefulset.yaml
# Save the output of this file and use kubectl create -f to import
# it into Kubernetes.
#
# Created with podman-4.1.1

# NOTE: If you generated this yaml from an unprivileged and rootless podman container on an SELinux
# enabled system, check the podman generate kube man page for steps to follow to ensure that your pod/container
# has the right permissions to access the volumes added.
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: syncthing
  name: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  serviceName: syncthing
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      nodeSelector:
        kubernetes.io/hostname: computemule
      securityContext:
        fsGroup: 1000
      containers:
      - image: docker.io/syncthing/syncthing:latest
        name: syncthing
        livenessProbe:
          tcpSocket:
            port: 22000
          initialDelaySeconds: 5
        readinessProbe:
          tcpSocket:
            port: 22000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: 75m
            memory: 128Mi
        securityContext:
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
          - name: syncthing-mount
            mountPath: /var/syncthing
          - name: music-mount
            mountPath: /var/syncthing/Music
        ports:
          - containerPort: 8384
            name: syncthing-gui
          - containerPort: 22000
            name: syncthing-tcp
          - containerPort: 22000
            protocol: UDP
            name: syncthing-udp
          - containerPort: 21017
            protocol: UDP
            name: syncthing-data
      volumes:
      - name: syncthing-mount
        hostPath:
          path: /var/mnt/syncthing
          type: Directory
      - name: music-mount
        hostPath:
          path: /var/mnt/jfin/music
          type: Directory
