home/syncthing/syncthing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  namespace: syncthing
spec:
  rules:
  - host: home-sync.spacemule.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing-gui-service
            port:
              number: 8081
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syncthing-ingress-tcp
  namespace: syncthing
spec:
    entryPoints:
      - syncthing-tcp
    routes:
      - services:
        - name: syncthing-service
          port: 22000
        match: HostSNI(`*`)
